2009-06-07  Andy Buckley  <andy@insectnation.org>

	* Disabling D0 IL modpoint cone (using CDF modpoint instead),
	since there seems to be a crashing bug in FastJet's
	implementation: we can't release that way, since ~no D0 analyses
	will run.

2009-06-03  Andy Buckley  <andy@insectnation.org>

	* Putting SWIG-generated source files under SVN control to make
	life easier for people who we advise to check out the SVN head
	version, but who don't have a sufficiently modern copy of SWIG to

	* Adding the --disable-analyses option, for people who just want
	to use Rivet as a framework for their own analyses.

	* Enabling HepMC cross-section reading, now that HepMC 2.5.0 has
	been released.

2009-05-23  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Using gsl-config to locate libgsl

	* Fix the paths for linking such that our own libraries are found
	before any system libraries, e.g. for the case that there is an
	outdated fastjet version installed on the system while we want to
	use our own up-to-date version.

	* Change dmerge to ymerge in the e+e- analyses using JADE or
	DURHAM from fastjet. That's what it is called in fastjet-2.4 now.

2009-05-18  Andy Buckley  <andy@insectnation.org>

	* Adding use of gsl-config in configure script.

2009-05-16  Andy Buckley  <andy@insectnation.org>

	* Removing argument to vetoEvent macro, since no weight
	subtraction is now needed. It's now just an annotated return, with
	built-in debug log message.

	* Adding an "open" FinalState, which is only calculated once per
	even, then used by all other FSes, avoiding the loop over
	non-status 1 particles.

2009-05-15  Andy Buckley  <andy@insectnation.org>

	* Removing incorrect setting of DPS x-errs in CDF_2008 jet shape
	analysis: the DPS autobooking already gets this bit right.

	* Using Jet rather than FastJet::PseudoJet where possible, as it
	means that the phi ranges match up nicely between Particle and the
	Jet object. The FastJet objects are only really needed if you want